--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.4",
+    "handlebars": "^4.7.7",
     "nodemon": "^2.0.22"
   }
 }
